--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,6 +3,20 @@
   padding-top: 80px;
 }
 
+/* Error Input Field */
+.error {
+  border: 2px solid red;
+  background-color: #ffe5e5;
+}
+
+/* Error Message */
+.error-text {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 5px;
+}
+
+
 /* Hero Section */
 .contact-hero {
   background: linear-gradient(120deg, rgba(141, 244, 255, 0.8), rgba(0, 0, 0, 0.7)), url('/src/assets/contact-hero.jpeg') no-repeat center center/cover;  background-size: cover;
